<resources>
    <string name="app_name">MeMe</string>
    <string name="settingButton_main">환경설정</string>
    <string name="settings_name">환경설정</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="info_name">거북목 정보</string>
    <string name="turtle_def">정의</string>
    <string name="turtle_def_content">목을 앞으로 뺀 자세를 거북목이라고 한다. 더 자세히 설명하면 전체 목뼈 수가 7개인데 정상적으로는 귀가 어깨뼈봉우리와 같은 수직면 상에 있고 7개의 목뼈는 앞쪽으로 볼록하게 휘어서 배열되어 있다. 이를 경추 전만이라고 한다. 거북목 자세는 아래쪽 목뼈는 과하게 구부러지는 방향으로 배열되고 위쪽 목뼈와 머리뼈는 머리를 젖히는 방향으로 배열되어 전체적으로 목뼈 전만이 소실되고 머리가 숙여지지 않은 상태에서 고개가 앞으로 빠진 자세이다.</string>
    <string name="turtle_cause">원인</string>
    <string name="turtle_cause_content">컴퓨터 모니터가 눈높이보다 낮을 경우, 이를 장시간 같은 자세로 내려다보는 것이 가장 큰 원인이다. 처음에는 똑바로 쳐다보다가도 점점 시간이 지나면 고개가 숙여지고 목이 길어진다. 이렇게 머리가 앞으로, 또 아래로 향하는 자세가 계속되면 목과 어깨의 근육, 척추에도 무리가 생겨 통증이 생긴다. 또한 허리도 구부러져 있고 눈도 위로 치켜 뜬 상태가 된다. 이런 자세가 반복되면 근육이나 뼈는 자동으로 굳어지게 되고 통증 발생한다.</string>
    <string name="turtle_symptom">증상</string>
    <string name="turtle_symptom_content">어깨의 통증, 목의 통증, 눈의 피로, 불면증, 어지러움 등등</string>
    <string name="turtle_behavior">거북목을 만드는 대표적인 행동들</string>
    <string name="turtle_behavior_content1">1. 아래를 보면서 장시간 타이핑이나 독서를 하는 경우</string>
    <string name="turtle_behavior_content2">2. 허리를 구부정하게 하고 오래 앉아 있는 경우</string>
    <string name="turtle_behavior_content3">3. 머리를 앞으로 내밀면서 오래 운전하는 경우</string>
    <string name="turtle_self_diagnosis">진행정도 파악방법 </string>
    <string name="turtle_self_diagnosis_content">거북목 진행상태를 파악하기 위해 간단하고도 흔히 이용되는 방법을 적용하였다. 피실험자를 차렷 자세로 세운 후 귀의 중간에서부터 아래로 수직의 가상의 선을 그린다. 이때 어깨 중간 선이 수직 선상에 있으면 정상적인 상태이다. 그러나, 그 선이 어깨 중간선 보다 앞으로 2.5cm 정도 나와 있으면 거북목이 진행되고 있는 상태이며, 5cm 이상 나와 있으면 이미 거북목이 심각한 상태라 할 수 있다. </string>
    <string name="turtle_prevention">예방</string>
    <string name="turtle_prevention_content">앉아있을 때 옆에서 본 자세가 귀와 어깨 골반부가 일직선이 되도록 하는 것이 좋으며 장시간 앉아 있은 후에는 일정 시간 기지개를 펴듯이 몸과 목을 뒤로 젖혀 스트레칭을 하는 습관을 들이는 것이 좋다.</string>
    <string name="appwidget_text">dd</string>
    <string name="appwidget_textt">dlsd</string>
    <string name="add_widget">Add widget</string>

</resources>
