<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/info_scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.memes.InformationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_def"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/turtle_def"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/normal_and_turtle"/>

        <TextView
            android:id="@+id/textView_def_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/turtle_def_content"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/textView_cause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:text="@string/turtle_cause"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView_cause_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/turtle_cause_content"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/textView_symptom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:text="@string/turtle_symptom"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView_symptom_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/turtle_symptom_content"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/textView_behavior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:text="@string/turtle_behavior"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView_behavior_content1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/turtle_behavior_content1"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/textView_behavior_content2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/turtle_behavior_content2"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/textView_behavior_content3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/turtle_behavior_content3"
            android:textSize="13sp"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/turtle_drive"/>

        <TextView
            android:id="@+id/textView_self_diagnosis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:text="@string/turtle_self_diagnosis"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView_self_diagnosis_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/turtle_self_diagnosis_content"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/textView_prevention"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:text="@string/turtle_prevention"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView_prevention_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/turtle_prevention_content"
            android:textSize="13sp"/>

    </LinearLayout>


</ScrollView>